--- a/index.html
+++ b/index.html
@@ -11,25 +11,17 @@
 
 <body ng-controller="LoginController as login">
     <main>
-        <section class="nav-bg-container">
-            <div class="nav-musik-container">
-                <div class="featured-container">
-                    <div class="featured-musik">
-                        <img class="artist-background" src="http://orig05.deviantart.net/8cd0/f/2008/165/6/5/sunset_music_by_hongryu.jpg">
-                        <img class="music-note">
-                        <img class="">
-                        <div class="featured-name">
-                            <h1>Musik</h1>
-                    </div>
-                </div>
-                <h2 class="tag-line">Where words fail, musik speaks.</h2>
-            </div>
-        </section>
+
+<div id="hero">
+  <div class="wrapper">
+    <p>when words fail, musik speaks</p>
+  </div>
+</div>
 
         <section class="nav">
             <div class="arrow-right">
             </div>
-                <nav>
+                <nav ng-show="login.getCurrentUser().length">
                     <ul>
                         <li>
                             <a ui-sref="MusikParent.home"><i class="fa fa-home" aria-hidden="true"></i>Home</a>
@@ -39,6 +31,9 @@
                         </li>
                         <li>
                             <a ui-sref="MusikParent.friends"><i class="fa fa-users" aria-hidden="true"></i>Friends</a>
+                        </li>
+                        <li>
+                            <a ng-click=login.logOut()><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a>
                         </li>
                     </ul>
                 </nav>
